Fixing icon size and where the search sticks on mobile. (#186)

--- a/src/layouts/new-docs/style/page.css
+++ b/src/layouts/new-docs/style/page.css
@@ -221,6 +221,11 @@
 	/* Layout */
 	inset-block-start: 0;
 	position: sticky;
+
+	@media (width < 1024px) {
+		/* Layout */
+		inset-block-start: 60--rpx;
+	}
 }
 
 .page-content {
